--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -185,7 +185,7 @@ html, body {
     background: $dark-blue;
     z-index: 10;
     .handle {
-        background: $dark-blue;
+        background: #5cb85c;
         width: 80px;
         left: -80px;
 
